# serializer version: 1
# name: test_all_entities[switch.backyard_loudness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.backyard_loudness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Loudness',
    'platform': 'russound_rio',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loudness',
    'unique_id': '00:11:22:33:44:55-C[1].Z[1]-loudness',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.backyard_loudness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Backyard Loudness',
    }),
    'context': <ANY>,
    'entity_id': 'switch.backyard_loudness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.bedroom_loudness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.bedroom_loudness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Loudness',
    'platform': 'russound_rio',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loudness',
    'unique_id': '00:11:22:33:44:55-C[1].Z[3]-loudness',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.bedroom_loudness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bedroom Loudness',
    }),
    'context': <ANY>,
    'entity_id': 'switch.bedroom_loudness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.kitchen_loudness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.kitchen_loudness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Loudness',
    'platform': 'russound_rio',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loudness',
    'unique_id': '00:11:22:33:44:55-C[1].Z[2]-loudness',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.kitchen_loudness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Loudness',
    }),
    'context': <ANY>,
    'entity_id': 'switch.kitchen_loudness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[switch.living_room_loudness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.living_room_loudness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Loudness',
    'platform': 'russound_rio',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'loudness',
    'unique_id': '00:11:22:33:44:55-C[2].Z[9]-loudness',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[switch.living_room_loudness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Room Loudness',
    }),
    'context': <ANY>,
    'entity_id': 'switch.living_room_loudness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
